syntax = "proto3";

package client_data_pb;

option go_package="./client_data_pb";

message ClientOnScreenData {
    bool ShouldUpdate = 1;
    string OnScreenText = 2;
}

message ClientExecData {
    bool ShouldExec = 1;
    string Command = 2;
}

message ClientDataRequest { string client_id = 1; }

message ClientDataOnScreenTextResponse { ClientOnScreenData on_screen = 1; }

message RegisterResponse { int64 status = 1; }

service Consumer {
    rpc UnregisterClient(ClientDataRequest) returns (RegisterResponse);
    rpc RegisterClient(ClientDataRequest) returns (RegisterResponse);
    rpc GetOnScreenText(ClientDataRequest) returns (ClientDataOnScreenTextResponse);
    rpc GetExecCommand(ClientDataRequest) returns (ClientExecData);
}